<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.opilane.login.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_above="@+id/epost"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="49dp"
        android:drawable="@drawable/blue"
        android:id="@+id/ImageView"
        android:src="@drawable/blue"/>


    <EditText
        android:id="@+id/password"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/epost"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/epost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password"
        android:text="@string/login" />

    <TextView
        android:id="@+id/katsed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password"
        android:layout_marginTop="56dp"
        android:gravity="center_horizontal"
        android:text="@string/katsed"
        android:textAppearance="@android:style/TextAppearance.Small" />

    <TextView
        android:id="@+id/registreeri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/katsed"
        android:layout_marginTop="11dp"
        android:gravity="center_horizontal"
        android:text="@string/registreeri"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/unustatud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/registreeri"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal"
        android:text="@string/unustatud"
        android:textAppearance="@android:style/TextAppearance.Small" />
</RelativeLayout>
